# dbt-review-assistant

./: .coverage  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  dependency-updates.yml  main.yml  pr-title.yml  publish.yml
src/checks/: __init__.py  argparser.py  entrypoint.py
src/checks/macro_checks/: macro_arguments_have_descriptions.py  macro_arguments_have_types.py  macro_arguments_match_manifest_vs_sql.py  macro_names_must_match_pattern.py  macros_have_descriptions.py
src/checks/model_checks/: model_column_descriptions_are_consistent.py  model_column_names_match_manifest_vs_catalog.py  model_column_names_must_match_pattern.py  model_column_types_match_manifest_vs_catalog.py  model_columns_have_descriptions.py  model_columns_have_types.py  model_names_must_match_pattern.py  models_have_access.py  models_have_columns.py  models_have_constraints.py  models_have_contracts.py  models_have_data_tests.py  models_have_descriptions.py  models_have_properties_file.py  models_have_specific_config.py  models_have_specific_materialization.py  models_have_specific_meta.py  models_have_tags.py  models_have_unit_tests.py
src/checks/seed_checks/: __init__.py  seed_column_names_match_manifest_vs_catalog.py  seed_column_types_match_manifest_vs_catalog.py  seed_columns_have_descriptions.py  seed_columns_have_types.py  seeds_have_columns.py  seeds_have_data_tests.py  seeds_have_descriptions.py  seeds_have_tags.py
src/checks/snapshot_checks/: __init__.py  snapshot_columns_have_descriptions.py  snapshot_columns_have_types.py  snapshot_names_match_pattern.py  snapshots_have_columns.py  snapshots_have_data_tests.py  snapshots_have_descriptions.py  snapshots_have_tags.py
src/checks/source_checks/: source_column_names_match_manifest_vs_catalog.py  source_column_types_match_manifest_vs_catalog.py  source_columns_have_descriptions.py  source_columns_have_types.py  sources_have_columns.py  sources_have_data_tests.py  sources_have_descriptions.py  sources_have_freshness.py  sources_have_loader.py  sources_have_tags.py
src/utils/: artifact_data.py  check_abc.py  check_arg_parser.py  check_failure_messages.py  config.py  console_formatting.py  get_relatives.py  manifest_filter_conditions.py
src/utils/catalog_object/: __init__.py  catalog_table.py
src/utils/manifest_object/: __init__.py  macro.py  manifest_object.py  unit_test.py
tests/: test_argparser.py  test_entrypoint.py
tests/checks/macro_checks/: test_macro_arguments_have_descriptions.py  test_macro_arguments_have_types.py  test_macro_arguments_match_manifest_vs_sql.py  test_macro_names_match_pattern.py  test_macros_have_descriptions.py
tests/checks/model_checks/: test_model_column_descriptions_are_consistent.py  test_model_columns_have_types.py  (+17 more)
tests/utils/: test_artifact_data.py  test_check_abc.py  test_check_arg_parser.py  test_check_failure_messages.py  test_config.py  test_console_formatting.py  test_get_relatives.py  test_manifest_filter_conditions.py
(+53 files in other folders)
